# scangearmp

./: LICENSE-scangearmp-2.30EN.txt  LICENSE-scangearmp-2.30FR.txt  LICENSE-scangearmp-2.30JP.txt  LICENSE-scangearmp-2.30SC.txt  scangearmp-common.spec
434/: cnc1774d.tbl
434/libs_bin32/: libcncpmsimg434.so.2.3.0  libcncpmslld434.so.2.3.0  libcncpmslld434c.so.1.04.1
434/libs_bin64/: libcncpmsimg434.so.2.3.0  libcncpmslld434.so.2.3.0  libcncpmslld434c.so.1.04.1
435/: cnc1775d.tbl  cnc_4350.tbl
435/libs_bin32/: libcncpmsimg435.so.2.3.0  libcncpmslld435.so.2.3.0  libcncpmslld435c.so.1.04.1
435/libs_bin64/: libcncpmsimg435.so.2.3.0  libcncpmslld435.so.2.3.0  libcncpmslld435c.so.1.04.1
437/: cnc177bd.tbl
437/libs_bin32/: libcncpmsimg437.so.2.3.0  libcncpmslld437.so.2.3.0  libcncpmslld437c.so.1.04.1
437/libs_bin64/: libcncpmsimg437.so.2.3.0  libcncpmslld437.so.2.3.0  libcncpmslld437c.so.1.04.1
438/: cnc177ad.tbl  cnc_4380.tbl
438/libs_bin32/: libcncpmsimg438.so.2.3.0  libcncpmslld438.so.2.3.0  libcncpmslld438c.so.1.04.1
438/libs_bin64/: libcncpmsimg438.so.2.3.0  libcncpmslld438.so.2.3.0  libcncpmslld438c.so.1.04.1
com/ini/: canon_mfp_net.ini
com/libs_bin32/: libcncpcmcm.so.8.0.1  libcncpmsimg.so.1.0.2  libcncpmslld.so.1.0.1  libcncpmsui.so.2.3.0  libcncpnet.so.1.2.3
com/libs_bin64/: libcncpcmcm.so.8.0.1  libcncpmsimg.so.1.0.2  libcncpmslld.so.1.0.1  libcncpmsui.so.2.3.0  libcncpnet.so.1.2.3
debian/: changelog  control  copyright  postinst  postrm  rules  scangearmp-e400series.docs  scangearmp-e400series.postrm  scangearmp-e560series.postrm  scangearmp-mx470series.postrm  scangearmp-mx530series.postinst  scangearmp-mx530series.postrm
scangearmp/: ChangeLog  INSTALL  Makefile.am  NEWS  README  acconfig.h  configure.in  scangearmp.glade  scangearmp.gladep
scangearmp/backend/: Makefile.am  canon_mfp.c  canon_mfp.conf  canon_mfp.h  canon_mfp_debug.h  canon_mfp_opts.h  canon_mfp_tools.c  canon_mfp_tools.h
scangearmp/backend/include/: cnmslld.h
scangearmp/etc/: 80-canon_mfp.rules  Makefile.am
scangearmp/include/: Makefile.am  cnmsability.h  cnmsdef.h  cnmsimg.h  cnmstype.h  cnmsui.h  scanopts.h
scangearmp/pixmaps/: image_curve_h_grad_226.xpm  image_curve_v_grad_226.xpm
scangearmp/po/: POTFILES.in  de.po  fr.po  ja.po  scangearmp.pot  zh.po
scangearmp/src/: Makefile.am  callbacks.c  callbacks.h  child_dialog.c  child_dialog.h  cnmsfunc.c  cnmsfunc.h  cnmsnetwork.c  cnmsnetwork.h  cnmsstr.c  cnmsstr.h  cnmsstrings.h  coloradjust.c  coloradjust.h  coloradjust_bc.c  coloradjust_bc.h  coloradjust_fr.c  coloradjust_fr.h  coloradjust_hg.c  coloradjust_hg.h  coloradjust_mc.c  coloradjust_mc.h  coloradjust_tc.c  coloradjust_tc.h  coloradjuststr.h  com_gtk.c  com_gtk.h  errors.h  file_control.c  file_control.h  interface.c  interface.h  keep_setting.c  keep_setting.h  main.c  preference.c  preference.h  prev_main.c  prev_main.h  prev_sub.c  (+23 more)
scripts/install_deb/: install.sh
scripts/install_rpm/: install.sh
